# dilithium

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool  version.h
build-tools/: depcomp
data/: Makefile.am
docs/: .gitignore  Makefile.am  dilithium-main.txt  dilithium.1  dilithium.1.in  dilithium.dox  dilithium.html  server_options.txt  what-is-dilithium.html
etc/: Makefile.am  cyrstal-display-manager  dilithium-deb-rc  dilithium-rc  dilithium.def
include/: ascii.h  colors.h  common.h  console.h  daemon.h  dilithium.h  global.h  privileges.h  spawner.h  upap.h  xauthxx.h  xjpeg.h  xlogin.h
include/xlib++/: button.hpp  character.hpp  color.hpp  display.hpp  event_dispatcher.hpp  exceptions.hpp  glxwindow.hpp  graphics_context.hpp  label.hpp  label_base.hpp  pointer.hpp  shapes.hpp  textbox.hpp  window.hpp  window_base.hpp
m4/: dilithium-doxygen.m4  dilithium-groff.m4  dilithium-lib_gcrypt.m4  getpw.m4
src/: .gitignore  Makefile.am  common.cc  console.cc  daemon.cc  dilithium.cc  privileges.cc  spawner.cc  xauthxx.cc
src/.deps/: dilithium-common.Po  dilithium-console.Po  dilithium-daemon.Po  dilithium-dilithium.Po  dilithium-privileges.Po  dilithium-spawner.Po  dilithium-xauthxx.Po  dilithium-xlogin.Po
src/xlogin/: Makefile.am  libxlogin.cc  xjpeg.cc
src/xlogin/.deps/: libxlogin_a-libxlogin.Po  libxlogin_a-xjpeg.Po  libxlogin_la-libxlogin.Plo
